Added nrf52 / nrf51

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,17 @@ board = bluepill_f103c8
 platform_packages =
     framework-zephyr @ https://github.com/Hygdrasil/platformIO_zephyr3.git
 framework = zephyr 
+
+[env:96b_nitrogen]
+platform = nordicnrf52
+board = 96b_nitrogen
+platform_packages =
+    framework-zephyr @ https://github.com/Hygdrasil/platformIO_zephyr3.git
+framework = zephyr 
+
+[env:nordicnrf51]
+platform = nordicnrf51
+board = bbcmicrobit
+platform_packages =
+    framework-zephyr @ https://github.com/Hygdrasil/platformIO_zephyr3.git
+framework = zephyr 
